--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>  
-<p>I'm hosted with Github Pages.</p>
+<h1>MNA37</h1>  
+<p>Fűszfás Levi.</p>
 </body> 
 </html>
