--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>MNA37</h1>  
-<p>Füszfás Levi.</p>
-</body> 
-</html>
+---
+layout: home
+background: '/img/bg-index.jpg'
+---
